--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<span>BOT SHOP</span>
 			</div><!-- End col-md-12 -->
 		</div><!-- End row -->
-	</div><!-- End container -->
+	</div><!-- End container ->
 </section>
 
 <!-- Footer -->
